@startuml
class Owner {
    - name : String
}

class BankAccount {
    - identifier : Long
    - name : String
    - iban : String
    - balance : Double
}

class Transaction {
    - identifier : Long
    - date : Date
    - sender : BankAccount
    - recipient : BankAccount
    - amount : Double
    - description : String
    - category : TransactionCategory
}
note bottom: The sender and the recipient should be different. The date should be passed or present.

class TransactionCategory {
    - name : String
    - description : String
}
note top: A transaction category cannot have itself has a subcategory.

TransactionCategory *-- "subcategory" TransactionCategory
BankAccount "1..*" -- "1..1" Owner : < owns
BankAccount -- "0..*" Transaction
@enduml